--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "exceljs": "^1.6.2",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "lodash": "^4.17.11",
@@ -19,7 +20,9 @@
     "morgan": "~1.9.0",
     "multer": "^1.4.0",
     "mysql": "^2.16.0",
-    "node-cache": "^4.2.0"
+    "node-cache": "^4.2.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.7"
